# c-coroutines

./: .clangd  .gitignore  CMakeLists.txt  README.md
ci/: build.sh  clean.sh  test.sh
include/: coroutine.h  foreach.h
src/: main.c
test/: test_fib.c  test_range.c  test_step.c
