cmake_minimum_required(VERSION 3.22.1)
set(ARTIFACT c-coroutines)
project(${ARTIFACT})

set(CMAKE_BUILD_TYPE "debug")
set(CMAKE_C_STANDARD "17")
set(CMAKE_C_COMPILER "clang")
set(C_COMMON_FLAGS "-std=c17 -Wall -Werror")
set(CMAKE_EXPORT_COMPILE_COMMANDS "true")
if (CMAKE_BUILD_TYPE STREQUAL "debug")
    set(CMAKE_CXX_FLAGS "${C_COMMON_FLAGS} -O0 -g -fsanitize=address,undefined,leak")
elseif (CMAKE_BUILD_TYPE STREQUAL "release")
    set(CMAKE_CXX_FLAGS "${C_COMMON_FLAGS} -O3")
endif ()

include_directories("src")
file(GLOB_RECURSE SRC CONFIGURE_DEPENDS src/*.h src/*.c)
add_executable(${ARTIFACT} ${SRC})
